# helix

./: Cargo.toml  languages.toml
helix-lsp/src/: lib.rs
helix-plugin-host/: Cargo.toml
helix-plugin-host/src/: main.rs  manifest.rs  plugin.rs  server.rs
helix-plugin-sdk/: Cargo.toml
helix-plugin-sdk/src/: lib.rs
helix-term/src/commands/: typed.rs
helix-view/src/: clipboard.rs  editor.rs
plugins/: plugins.toml
plugins/github-pr-dashboard/: Cargo.toml
plugins/github-pr-dashboard/src/: main.rs
plugins/helix-github-pr-dashboard/: Cargo.toml
plugins/helix-github-pr-dashboard/src/: main.rs
plugins/hello-plugin/: Cargo.toml
plugins/hello-plugin/src/: main.rs
plugins/task-runner/: Cargo.toml
plugins/task-runner/src/: main.rs
