[package]
name = "helix-plugin-hello"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Example Helix plugin demonstrating the plugin runtime"

[dependencies]
anyhow = "1.0"
helix-plugin-sdk = { path = "../../helix-plugin-sdk" }
serde_json = "1.0"