[package]
name = "helix-task-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Helix plugin that discovers and runs workspace build/test tasks"

[dependencies]
anyhow = "1.0"
helix-plugin-sdk = { path = "../../helix-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
